[package]
name = "rust"
version = "0.1.0"
edition = "2018"
authors = ["MD Gaziur Rahman Noor <mdgaziurrahmannoor@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
# lto = true
# codegen-units = 1
# panic = 'abort'
# overflow-checks = false
# opt-level = "s"
# debug = true
#
